--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -7,6 +7,7 @@
         --background: 0 0% 100%;
         --foreground: 0 0% 3.9%;
 
+        --canvas: 0 0% 96.1%;
         --card: 0 0% 100%;
         --card-foreground: 0 0% 3.9%;
 
@@ -38,6 +39,7 @@
     .dark {
         --background: 0 0% 3.9%;
         --foreground: 0 0% 98%;
+        --canvas: 0 0% 10%;
 
         --card: 0 0% 3.9%;
         --card-foreground: 0 0% 98%;
